--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^2.0.77",
     "@ai-sdk/react": "^2.0.76",
     "@expo/vector-icons": "^15.0.3",
     "@hono/trpc-server": "^0.4.0",
     "@nkzw/create-context-hook": "^1.1.0",
     "@react-native-async-storage/async-storage": "2.2.0",
-    "@rork-ai/toolkit-sdk": "^0.2.44",
+    "@rork-ai/toolkit-sdk": "*",
     "@stardazed/streams-text-encoding": "^1.0.2",
     "@tanstack/eslint-plugin-query": "^5.91.2",
     "@tanstack/react-query": "^5.90.5",
@@ -22,6 +23,7 @@
     "@trpc/react-query": "^11.7.2",
     "@trpc/server": "^11.7.2",
     "@ungap/structured-clone": "^1.3.0",
+    "ai": "^5.0.107",
     "expo": "^54.0.27",
     "expo-blur": "~15.0.8",
     "expo-camera": "~17.0.10",
