--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "expo-web-browser": "~15.0.10",
     "hono": "^4.10.7",
     "lucide-react-native": "^0.475.0",
+    "openai": "^6.10.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
